# Experiment-EmbedSystems-Playground

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md  measure.bat  setup.bat
CMake/: CompileOptions.cmake  Functions.cmake  GlobalVars.cmake  Targets.cmake  Thirdparties.cmake
CMake/Finds/: FindV8.cmake
CMake/Targets/: CSharp.cmake  Cpp.cmake  Java.cmake  Javascript.cmake  Julia.cmake  Lua.cmake  LuaJIT.cmake  Python.cmake  _Utils.cmake
include/Embed-Pipeline/CSharp/: scripting_csharp.h
include/Embed-Pipeline/Cpp/: scripting_cpp.h
include/Embed-Pipeline/Java/: scripting_java.h
include/Embed-Pipeline/Javascript/: scripting_javascript.h
include/Embed-Pipeline/Julia/: scripting_julia.h
include/Embed-Pipeline/Lua/: scripting_lua.h
include/Embed-Pipeline/LuaJIT/: scripting_luajit.h
include/Embed-Pipeline/Python/: scripting_python.h
include/global/: ScriptingPipeline.h  Utils.h
scripts/: example.hpp  example.jl  example.js  example.lua  example.py
scripts/example.cs/: ExampleCS.csproj  ExampleCS.sln  MainClass.cs
scripts/example.cs/Native/: IEmbed.cs
scripts/example.cs/Properties/: AssemblyInfo.cs
scripts/example.java/Example/src/com/bsmith/example/: MainClass.java
src/: ScriptingPipeline.cpp  Utils.cpp  main.cpp
src/CSharp/: main.cpp  scripting_csharp.cpp
src/Cpp/: main.cpp  scripting_cpp.cpp
src/Java/: scripting_java.cpp
src/Javascript/: main.cpp  scripting_javascript.cpp
src/Julia/: scripting_julia.cpp
src/Lua/: main.cpp  scripting_lua.cpp
src/LuaJIT/: main.cpp  scripting_luajit.cpp
src/Python/: main.cpp  scripting_python.cpp
tools/: measurement.py
